1/2 part4- video 17 phut thu 11

--- a/HotelListing.API/HotelListing.API/appsettings.json
+++ b/HotelListing.API/HotelListing.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HotelListingDbConnectionString": "Sever=(localdb)\\mssqllocaldb;Database=HotelListingAPIDb;Trust_Connection=true;MultipleActiveResultSets=True"
+  },
   "SeriLog": {
     "MinimumLevel": {
       "Default": "Information",
