--- a/HotelListing.API/HotelListing.API/appsettings.json
+++ b/HotelListing.API/HotelListing.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "HotelListingDbConnectionString": "Sever=(localdb)\\mssqllocaldb;Database=HotelListingAPIDb;Trust_Connection=true;MultipleActiveResultSets=True"
+    "HotelListingDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HotelListingAPIDb;Trusted_Connection=true;MultipleActiveResultSets=True" 
   },
   "SeriLog": {
     "MinimumLevel": {
