--- a/HotelListing.API/HotelListing.API/appsettings.json
+++ b/HotelListing.API/HotelListing.API/appsettings.json
@@ -1,6 +1,13 @@
 {
   "ConnectionStrings": {
-    "HotelListingDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HotelListingAPIDb;Trusted_Connection=true;MultipleActiveResultSets=True" 
+    "HotelListingDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HotelListingAPIDb;Trusted_Connection=true;MultipleActiveResultSets=True"
+  },
+  "JwtSettings" :
+  {
+    "Issuer": "HotelListingAPI",
+    "Audience": "HotelListingApIUser",
+    "DurationInMinutes": 10,
+    "Key": "YourSuperSecretKey"
   },
   "SeriLog": {
     "MinimumLevel": {
