--- a/HotelListing.API/HotelListing.API/appsettings.json
+++ b/HotelListing.API/HotelListing.API/appsettings.json
@@ -5,7 +5,7 @@
   "JwtSettings" :
   {
     "Issuer": "HotelListingAPI",
-    "Audience": "HotelListingApIUser",
+    "Audience": "HotelListingApIClient",
     "DurationInMinutes": 10,
     "Key": "YourSuperSecretKey"
   },
